--- a/mks-sistemas/index.html
+++ b/mks-sistemas/index.html
@@ -15,8 +15,10 @@
     <title>MKS-FRONT-CHALLENGE</title>
   
   </head>
-  <body id="body">
+  <body>
+    <main id="root">
 
+    </main>
     <script type="module" src="/src/main.tsx"></script>
     <script type="module" src="/src/presentation/pages/footer/footer.tsx"></script>
     <script type="module" src="/src/presentation/pages/header/header.tsx"></script>
